Created DatabaseContext. Configured diffrent DbProviders.

--- a/Compass.BLL/Compass.BLL.csproj
+++ b/Compass.BLL/Compass.BLL.csproj
@@ -8,4 +8,9 @@
     <ProjectReference Include="..\Compass.API\Compass.DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
