--- a/CompassSite/appsettings.json
+++ b/CompassSite/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "DatabaseProvider": "",
+
+  "ConnectionStrings": {
+    "Postgres": "",
+    "MySql": "",
+    "MsSql": ""
+  }
 }
