--- a/CompassSite/appsettings.json
+++ b/CompassSite/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
 
-  "DatabaseProvider": "",
+  "DatabaseProvider": "MySql",
 
   "ConnectionStrings": {
     "Postgres": "",
