Добавлен функционал профиля

--- a/CompassSite/appsettings.json
+++ b/CompassSite/appsettings.json
@@ -12,7 +12,7 @@
 
   "ConnectionStrings": {
     "Postgres": "",
-    "MySql": "",
+    "MySql": "server=localhost;port=3306;UserId=Silse;Password=7eefefrq;database=compass_db",
     "MsSql": ""
   }
 }
