Добавлена генерация robots.txt

--- a/CompassSite/Compass.Site.csproj
+++ b/CompassSite/Compass.Site.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.SEOHelper" Version="1.0.1" />
     <PackageReference Include="EasyData.AspNetCore" Version="1.2.7" />
     <PackageReference Include="EasyData.EntityFrameworkCore.Relational" Version="1.2.7" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
